Remove drag-and-drop sorting and expanding/collapsing elements from the edit form for the item type metadata element set. Fix #408.

--- a/admin/themes/default/css/style.css
+++ b/admin/themes/default/css/style.css
@@ -2042,6 +2042,13 @@ button.remove_search {
 .element-set-name { width: 20%; }
 
 
+/* Edit Item Type Metadata
+================================================== */
+
+.item-type-metadata .drawer { display: none; }
+
+
+
 /* Browse Themes
 ================================================== */
 
